# javaup

./: .gitignore  .golangci.yml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Cargo.toml  README.md  README.zh-CN.md  build.go  build_test.go  go.mod  go.sum  golangci-lint.mod  govulncheck.mod  govulncheck.sum  install.ps1  install.sh  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml  build.rs
cli/src/: application.rs  build_info.rs  cli.rs  lib.rs  main.rs  output.rs  process.rs
cli/src/commands/: build.rs  init.rs  mod.rs  mvn.rs  settings.rs  status.rs  version.rs
cli/tests/: init_output.rs  mvn_command.rs
cmd/jup/: main.go
core/: Cargo.toml
core/src/: executable.rs  java.rs  lib.rs  maven_settings.rs  process.rs  storage.rs
core/src/project/: build.rs  config.rs  detection.rs  maven.rs  mod.rs
desktop/: Cargo.toml
desktop/src/: main.rs
docs/: user-guide.md  user-guide.zh-CN.md
internal/apphome/: apphome.go  apphome_test.go
internal/buildinfo/: buildinfo.go  buildinfo_test.go
internal/buildtool/: buildtool.go
internal/cli/: app.go  app_test.go  init.go  init_test.go  progress.go  project_picker.go  project_picker_test.go  root.go  run.go  run_test.go  settings.go  settings_test.go  status.go  status_test.go  uninit.go  uninit_test.go  uninstall.go  uninstall_test.go  update.go  update_test.go  version.go
internal/javainfo/: locator.go  locator_test.go
internal/mavensettings/: store.go  store_test.go
internal/project/: config.go  config_test.go  initializer.go  initializer_test.go  (+15 more)
(+17 files in other folders)
