[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "javaup"
path = "src/main.rs"

[dependencies]
javaup_core.workspace = true
clap = { version = "4.6", features = ["derive"] }

[build-dependencies]
chrono = "0.4"
