[package]
name = "javaup-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "jup"
path = "src/main.rs"

[dependencies]
javaup_core.workspace = true
anstream = "1.0"
clap = { version = "4.6", features = ["derive"] }

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
tempfile = "3.20"
