[package]
name = "javaup-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
name = "javaup_core"

[dependencies]
roxmltree = "0.21"
sha2 = "0.11.0"
tempfile = "3.27"

[dev-dependencies]
proptest = "1.7"
